--- a/src/WebApp/WebApp/appsettings.json
+++ b/src/WebApp/WebApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;userid=root;password=prata;database=site_noticias;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
