trocando o banco de dados de mysql para sql server

--- a/src/WebApp/WebApp/appsettings.json
+++ b/src/WebApp/WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;userid=root;password=prata;database=site_noticias;"
+    "DefaultConnection": "Data Source=LAPTOP-HFMA3T36\\SQLEXPRESS; Initial Catalog=site_noticias; User ID=sa; Password=prata; Connect Timeout=30; Encrypt=False; TrustServerCertificate=False; ApplicationIntent=ReadWrite; MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
