criação da camada de histórias e histórias do autor

--- a/src/WebApp/WebApp/WebApp.csproj
+++ b/src/WebApp/WebApp/WebApp.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Infra\Infra\Infra.csproj" />
+    <ProjectReference Include="..\..\Historias\Historias\Historias.csproj" />
   </ItemGroup>
 
 </Project>
